(CLIENT) editing the base url, fixing a z-index bug in the outernav

--- a/client/src/components/OuterNav/OuterNav.scss
+++ b/client/src/components/OuterNav/OuterNav.scss
@@ -4,7 +4,7 @@
     display: flex !important;
     justify-content: center;
     margin: 0;
-    z-index: 999999999999999999999999999;
+    z-index: 99999;
     box-shadow: 0px 10px 10px black(14, 14, 14);
     background-color: #11161A;
     position: fixed;
